--- a/RadioMarcaServer/WebContent/index.html
+++ b/RadioMarcaServer/WebContent/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Insert title here</title>
+<title>VAMOS CON OTRO PROGRAMILLA, CHAMP</title>
 </head>
 <body>
 	<form action="/RadioMarcaServer/ProcesarSubida" enctype="multipart/form-data" method="post">
