--- a/RadioMarcaServer/WebContent/index.html
+++ b/RadioMarcaServer/WebContent/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -7,10 +7,10 @@
 <body>
 	<form action="/RadioMarcaServer/ProcesarSubida" enctype="multipart/form-data" method="post">
 		<label for = "file"> Audio del programa: </label><input type="file" name="file" id = " file" required/><br/><br/>
-		<label for="date"> Fecha: </label>  <input type="date" name="date" id = "date" required="required"/><br/><br/>
+		<label for = "date"> Fecha: </label>  <input type="date" name="date" id = "date" placeholder="AAAA-MM-DD" required="required"/><br/><br/>
 		<label for = "destino">Destino:</label> <input type="text" name="destino" id= "destino" required="required"/><br/><br/>
 		<input type="checkbox" name="notify" value="notify"/> Notificar a los usuarios <br/><br/>
-		<input type="submit" value="Subir"/>
+		<input type = "submit" value = "Subir"/>
 	</form>
 </body>
 </html>
