--- a/RadioMarcaServer/WebContent/error.html
+++ b/RadioMarcaServer/WebContent/error.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 	El FORMATO DEL FICHERO ES INCORRECTO. SE ESPERA UN FICHERO MP3!
+	O HA OCURRIDO UN ERROR ACCEDIENDO A LA BASE DE DATOS O ALGO :) REVISE EL LOG! ;)
 </body>
 </html>
